--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!doctype html>
 
 <html>
-    <head>
-        <script src= "app.js">
+
+<head>
+    <script src="app.js">
             </script>
-    </head>
-    <body>
-        <h1> Jeopardy </h1>
-        <form class="inputbox">
-            Answer:<input type="text">
-            <button type="submit" class="btn">
-                Submit Answer</button>
-    </body>
+</head>
+
+<body>
+    <h1>Jeopardy</h1>
+        Answer:<input type="text" id="inputBox">
+        <button id="btn">Guess</button>
+        <h3 id="scoreBoard">Score: </h3>
+        <div id="frage"> 
+            Question: 
+        </div>
+</body>
+
 </html>
